the newest gcc/branches/c++-modules used 'gcm' instead of 'nms'

--- a/codes/gcc/03.impl_unit/Makefile
+++ b/codes/gcc/03.impl_unit/Makefile
@@ -31,7 +31,7 @@ main: main.o hello.o hello_impl.o
 
 clean:
 	@echo Cleaning directorys...
-	@rm *.out *.o *.nms
+	@rm *.out *.o *.nms *.gcm
 	@echo Clean complete.
 
 # PHONY
