--- a/codes/gcc/07.template_instantiation/Makefile
+++ b/codes/gcc/07.template_instantiation/Makefile
@@ -27,7 +27,7 @@ main: main.o
 
 clean:
 	@echo Cleaning directorys...
-	@rm *.out *.o *.nms
+	@rm *.out *.o *.nms *.gcm
 	@echo Clean complete.
 
 # PHONY
