--- a/codes/gcc/04.inline_and_template/Makefile
+++ b/codes/gcc/04.inline_and_template/Makefile
@@ -39,7 +39,7 @@ main: main.o hello.o say.o foo.o foo_impl.o
 
 clean:
 	@echo Cleaning directorys...
-	@rm *.out *.o *.nms
+	@rm *.out *.o *.nms *.gcm
 	@echo Clean complete.
 
 # PHONY
