--- a/codes/gcc/06.dependence/Makefile
+++ b/codes/gcc/06.dependence/Makefile
@@ -39,7 +39,7 @@ main: main.o hello_impl.o mod_impl.o
 
 clean:
 	@echo Cleaning directorys...
-	@rm *.out *.o *.nms
+	@rm *.out *.o *.nms *.gcm
 	@echo Clean complete.
 
 # PHONY
